<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="resultInterface"
            type="String" />
        <variable
            name="equationInterface"
            type="String" />
        <variable
            name="historyInterface"
            type="String" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:gravity="bottom"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"

            android:textStyle="bold"
            android:text="My Calculator" />

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/result_margin"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:gravity="bottom"
            android:scrollbars="vertical"
            android:textSize="@dimen/history_size"
            android:textAlignment="textEnd"
            android:text="@{historyInterface}"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:background="@color/peach__cornsilk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tvOperation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_marginHorizontal="@dimen/result_margin"
                android:paddingHorizontal="16dp"
                android:textSize="@dimen/operation_size"
                android:text="@{equationInterface}" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginHorizontal="@dimen/result_margin"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:textSize="@dimen/result_size"
                android:textAlignment="textEnd"
                android:text="@{resultInterface}"
                tools:ignore="RtlCompat" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_clear"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_clear" />
                <TextView
                    android:id="@+id/btn_delete"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_delete" />
                <TextView
                    android:id="@+id/btn_percentage"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_percentage" />
                <TextView
                    android:id="@+id/btn_divide"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_divide" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_seven"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_seven" />
                <TextView
                    android:id="@+id/btn_eight"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_eight" />
                <TextView
                    android:id="@+id/btn_nine"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_nine" />
                <TextView
                    android:id="@+id/btn_multiply"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_multiply" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_four"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_four" />
                <TextView
                    android:id="@+id/btn_five"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_five" />
                <TextView
                    android:id="@+id/btn_six"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_six" />
                <TextView
                    android:id="@+id/btn_minus"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_minus" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_one"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_one" />
                <TextView
                    android:id="@+id/btn_two"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_two" />
                <TextView
                    android:id="@+id/btn_three"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_three" />
                <TextView
                    android:id="@+id/btn_plus"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_plus" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_decimal"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_decimal" />
                <TextView
                    android:id="@+id/btn_zero"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_zero" />
                <TextView
                    android:id="@+id/btn_equal"
                    android:background="@drawable/style__button"

                    android:layout_width="@dimen/equalbutton_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/button_margin"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLines="1"

                    android:text="@string/btn_equal" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</layout>